backend-services/landing-page/food-landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-landing-service
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
