backend-services/landing-page/food-landing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-landing-ingress
spec:
  rules:
    - host: signup.yourdomain.com
      http:
        paths:
          - path: /food-landing
            pathType: Prefix
            backend:
              service:
                name: food-landing-service
                port:
                  number: 80
